// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIModal Should be possible to do snapshot testing on the modal 1`] = `
<div
  aria-hidden={true}
  className="xui-mask xui-unmask"
  data-automationid="xui-modal--mask"
  id="test-modal"
  onClick={null}
  role="presentation"
>
  <section
    aria-labelledby="generatedHeaderId"
    className="xui-modal xui-modal-width-medium xui-modal-layout"
    data-automationid="xui-modal"
    role={null}
    style={null}
    tabIndex={-1}
  >
    <header
      className="xui-modal--header xui-modal--heading"
      id="generatedHeaderId"
    >
      Test header
      <button
        className="xui-button xui-modal--close xui-button-icon xui-button-icon-medium"
        data-automationid="xui-modal--close"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        title="Close"
        type="button"
      >
        <div
          className="xui-iconwrapper xui-iconwrapper-medium"
        >
          <svg
            className="xui-icon"
            focusable="false"
            height={12}
            viewBox="0 0 12 12"
            width={12}
          >
            <path
              d="M6 4.5L10.5 0 12 1.5 7.5 6l4.5 4.5-1.5 1.5L6 7.5 1.5 12 0 10.5 4.5 6 0 1.5 1.5 0 6 4.5z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </header>
    <div>
      test
    </div>
  </section>
</div>
`;

exports[`XUIModal should render an automation id when a qaHook is passed in 1`] = `
<div
  aria-hidden={true}
  className="xui-mask xui-unmask"
  data-automationid="xui-modal--mask"
  onClick={null}
  role="presentation"
>
  <section
    className="xui-modal xui-modal-width-medium xui-modal-layout"
    data-automationid="xui-modal"
    role={null}
    style={null}
    tabIndex={-1}
  >
    <header
      className="xui-modal--header xui-modal--heading"
      data-automationid="xui-modal--header"
    >
      <button
        className="xui-button xui-modal--close xui-button-icon xui-button-icon-medium"
        data-automationid="xui-modal--close"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        title="Close"
        type="button"
      >
        <div
          className="xui-iconwrapper xui-iconwrapper-medium"
        >
          <svg
            className="xui-icon"
            focusable="false"
            height={12}
            viewBox="0 0 12 12"
            width={12}
          >
            <path
              d="M6 4.5L10.5 0 12 1.5 7.5 6l4.5 4.5-1.5 1.5L6 7.5 1.5 12 0 10.5 4.5 6 0 1.5 1.5 0 6 4.5z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </header>
    <div>
      test
    </div>
  </section>
</div>
`;
